k8s/03-reactive-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactive-service
  namespace: sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactive-service
  template:
    metadata:
      labels:
        app: reactive-service
    spec:
      containers:
        - name: reactive-service
          image: reactive-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: reactive-service
  namespace: sandbox
spec:
  type: ClusterIP
  selector:
    app: reactive-service
  ports:
    - port: 8082
      targetPort: 8082
